more revisions. made collapsable better, fixed some style issues

--- a/index-style-sheet.css
+++ b/index-style-sheet.css
@@ -165,10 +165,13 @@ footer{
     width: 50vw;
     opacity: .8;
     border-radius: 5px;
+    transition: max-height .75s;
+    height: auto;
   }
 
-.BIO{
-    transition: max-height .75s;
+#bio.open{
+    max-height: 50vh;
+    overflow-y: auto;
 }
 
 #myBtn{
